--- a/index.html
+++ b/index.html
@@ -12,14 +12,14 @@
 <body>
     <section id="intro">
         <h1>Origami</h1>
-        <p>Welcome to the world of Arts and Crafts. This page is all about enhancing your creative skills using various
-            origami technics.</p>
-        <h2>Lets get started</h2>
+        <p>Bienvenido al mundo del arte y las manualidades. Está página es para mejorar tus habilidades creativas usando varias
+            técnicas de origami.</p>
+        <h2>Comencemos</h2>
 
         <div class="line"></div>
-        <!-- Set this link in src "https://en.wikipedia.org/wiki/Origami" that descibes Origami art/ technique-->
+        <!-- Pon este enlace en src "https://es.wikipedia.org/wiki/Origami" que desccribe el arte/la técnica del Origami-->
         <iframe width="700" height="620" style="border: 0px;" 
-        src=" ">
+        src="https://es.wikipedia.org/wiki/Origami">
         </iframe>
 
     </section>
@@ -28,16 +28,16 @@
 
         <div class="line"></div>
         <h1>Crane</h1>
-        <!-- add the link below https://www.thesprucecrafts.com/traditional-origami-crane-2540790 for making the crane in a href tag 
-            for example, href=" https://www.thesprucecrafts.com/traditional-origami-crane-2540790"      -->
-        <a href="" target="_blank">
+        <!-- agrega el enlace debajo https://www.thesprucecrafts.com/traditional-origami-crane-2540790 para hacer que la grulla esté en la etiqueta href  
+            por ejemplo, href=" https://www.thesprucecrafts.com/traditional-origami-crane-2540790"      -->
+        <a href="https://www.thesprucecrafts.com/traditional-origami-crane-2540790" target="_blank">
             <img src="crane.jpg" width="368" height="276">
         </a>
 
 
-        <h1>Tulip Flower</h1>
-        <!-- add the link below https://www.thesprucecrafts.com/christmas-origami-projects-4147453 for making the tulip_flower in a href tag-->
-        <a href="" target="_blank">
+        <h1>Tulipán</h1>
+        <!-- agrega el enlace debajo https://www.thesprucecrafts.com/christmas-origami-projects-4147453 para meter el tulipán dentro de la etiqueta href-->
+        <a href="https://www.thesprucecrafts.com/christmas-origami-projects-4147453" target="_blank">
             <img src="tulip_flower.jpg" width="368" height="276">
         </a>
 
@@ -46,14 +46,14 @@
 
         <div class="line"></div>
         <h1>Envelop</h1>
-        <!--add the link below  https://www.thesprucecrafts.com/make-an-easy-origami-envelope-4094705 for making the Envelop in a href tag-->
-        <a href="" target="_blank">
+        <!--agrega el enlace debajo https://www.thesprucecrafts.com/make-an-easy-origami-envelope-4094705 para meter el sobre dentro de la etiqueta href-->
+        <a href="https://www.thesprucecrafts.com/make-an-easy-origami-envelope-4094705" target="_blank">
             <img src="envelop.jpg" width="368" height="276">
         </a>
 
-        <h1>modular_box</h1>
-        <!--add the link below https://www.thesprucecrafts.com/modular-origami-cube-box-4082281 for making the modular box in a href tag-->
-        <a href="" target="_blank">
+        <h1>caja</h1>
+        <!--agrega el enlace debajo https://www.thesprucecrafts.com/modular-origami-cube-box-4082281 para meter la caja dentro de la etiqueta href-->
+        <a href="https://www.thesprucecrafts.com/modular-origami-cube-box-4082281" target="_blank">
             <img src="modular_box.jpg" width="368" height="276">
         </a>
 
